--- a/index.html
+++ b/index.html
@@ -27,7 +27,10 @@
             background: #fff;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         }
-        h1, h2, h3 {
+        h1 {
+            color: white;
+        }
+        h2, h3 {
             color: #00539C;
         }
         section {
