--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         }
         h1 {
-            color: white;
+            color: #fff;
         }
         h2, h3 {
             color: #00539C;
