--- a/index.html
+++ b/index.html
@@ -104,34 +104,48 @@
             <h2>Important Dates</h2>
             <p><strong>Submission Deadline:</strong> May 25th, 2025</p>
         </section>
-        <section id="organizers">
-            <h2>Competition Organizers</h2>
-            <ul>
-                <li>
-                    <strong>Harisu Abdullahi Shehu</strong><br>
-                    School of Engineering and Computer Science, Victoria University of Wellington, New Zealand.<br>
-                    Email: <a href="mailto:harisu.shehu@ecs.vuw.ac.nz">harisu.shehu@ecs.vuw.ac.nz</a>
-                </li>
-                <li>
-                    <strong>Hedwig Eisenbarth</strong><br>
-                    School of Psychology, Victoria University of Wellington, New Zealand.<br>
-                    Email: <a href="mailto:hedwig.eisenbarth@vuw.ac.nz">hedwig.eisenbarth@vuw.ac.nz</a>
-                </li>
-                <li>
-                    <strong>Bing Xue</strong><br>
-                    School of Engineering and Computer Science, Victoria University of Wellington, New Zealand.<br>
-                    Email: <a href="mailto:bing.xue@ecs.vuw.ac.nz">bing.xue@ecs.vuw.ac.nz</a>
-                </li>
-                <li>
-                    <strong>Will Browne</strong><br>
-                    School of Electrical Electronics and Robotics, Queensland University of Technology, Australia.<br>
-                    Email: <a href="mailto:will.browne@qut.edu.au">will.browne@qut.edu.au</a>
-                </li>
-            </ul>
-        </section>
+        
+    <section id="organizers">
+    <h2>Competition Organizers</h2>
+    <ul style="list-style: none; padding: 0;">
+        <li style="display: flex; align-items: center; margin-bottom: 1rem;">
+            <img src="images/harisu.jpg" alt="Harisu Abdullahi Shehu" style="width: 60px; height: 60px; border-radius: 50%; margin-right: 1rem;">
+            <div>
+                <strong>Harisu Abdullahi Shehu</strong><br>
+                School of Engineering and Computer Science, Victoria University of Wellington, New Zealand.<br>
+                Email: <a href="mailto:harisu.shehu@ecs.vuw.ac.nz">harisu.shehu@ecs.vuw.ac.nz</a>
+            </div>
+        </li>
+        <li style="display: flex; align-items: center; margin-bottom: 1rem;">
+            <img src="images/hedwig.jpg" alt="Hedwig Eisenbarth" style="width: 60px; height: 60px; border-radius: 50%; margin-right: 1rem;">
+            <div>
+                <strong>Hedwig Eisenbarth</strong><br>
+                School of Psychology, Victoria University of Wellington, New Zealand.<br>
+                Email: <a href="mailto:hedwig.eisenbarth@vuw.ac.nz">hedwig.eisenbarth@vuw.ac.nz</a>
+            </div>
+        </li>
+        <li style="display: flex; align-items: center; margin-bottom: 1rem;">
+            <img src="images/bing.jpg" alt="Bing Xue" style="width: 60px; height: 60px; border-radius: 50%; margin-right: 1rem;">
+            <div>
+                <strong>Bing Xue</strong><br>
+                School of Engineering and Computer Science, Victoria University of Wellington, New Zealand.<br>
+                Email: <a href="mailto:bing.xue@ecs.vuw.ac.nz">bing.xue@ecs.vuw.ac.nz</a>
+            </div>
+        </li>
+        <li style="display: flex; align-items: center; margin-bottom: 1rem;">
+            <img src="images/will.jpg" alt="Will Browne" style="width: 60px; height: 60px; border-radius: 50%; margin-right: 1rem;">
+            <div>
+                <strong>Will Browne</strong><br>
+                School of Electrical Electronics and Robotics, Queensland University of Technology, Australia.<br>
+                Email: <a href="mailto:will.browne@qut.edu.au">will.browne@qut.edu.au</a>
+            </div>
+        </li>
+    </ul>
+</section>
+
     </main>
     <footer>
-        <p>&copy; 2024 EMAP Dataset Challenge</p>
+        <p>&copy; 2025 EMAP Dataset Challenge</p>
     </footer>
 </body>
 </html>
