--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     <h2>Competition Organizers</h2>
     <ul style="list-style: none; padding: 0;">
         <li style="display: flex; align-items: center; margin-bottom: 1rem;">
-            <img src="images/harisu.jpg" alt="Harisu Abdullahi Shehu" style="width: 60px; height: 60px; border-radius: 50%; margin-right: 1rem;">
+            <img src="images/harisu.png" alt="Harisu Abdullahi Shehu" style="width: 60px; height: 60px; border-radius: 50%; margin-right: 1rem;">
             <div>
                 <strong>Harisu Abdullahi Shehu</strong><br>
                 School of Engineering and Computer Science, Victoria University of Wellington, New Zealand.<br>
