--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
             <p>
                 Participants can request access to the train and validation set of the extracted features through the following link: <a href="https://www.wgtn.ac.nz/psyc/research/emap-open-database">EMAP Open Database</a>.
             </p>
+                <p><strong>Note:</strong> The test set is not provided and will be used to rank participants on the scoreboard.</p>
         </section>
         <section id="competition-tasks">
             <h2>Competition Tasks</h2>
@@ -90,12 +91,14 @@
                 <li>Convert labels into binary classes: Low Arousal (0.00–0.5) and High Arousal (0.51–1.0).</li>
                 <li>Evaluate classification performance using the F1-score as the primary metric.</li>
             </ul>
+                <p><strong>Baseline Code:</strong> You can find baseline code for predicting arousal, skin conductance, and heart rate on our <a href="https://github.com/emapchallenge/baseline-results" target="_blank">GitHub page</a>.</p>
+
         </section>
         <section id="submission-guidelines">
             <h2>Submission Guidelines</h2>
             <ul>
                 <li>Submit a PPT slide describing your approach and achieved accuracy.</li>
-                <li>Include your best model(s), a prediction file, and a CSV file of selected features.</li>
+                <li>Include your best model(s), a prediction file (prediction.py), and a CSV file of selected features.</li>
                 <li>Provide open-source code for reproducibility.</li>
                 <li>Submit all materials to: <a href="mailto:afcrinlab@vuw.ac.nz">afcrinlab@vuw.ac.nz</a></li>
             </ul>
