--- a/index.html
+++ b/index.html
@@ -103,6 +103,10 @@
                 <li>Submit all materials to: <a href="mailto:afcrinlab@vuw.ac.nz">afcrinlab@vuw.ac.nz</a></li>
             </ul>
         </section>
+        <section id="prizes">
+            <h2>Prizes</h2>
+            <p>IEEE CEC 2025 conference certificates will be awarded to the 1st, 2nd, and 3rd place winners of this competition.</p>
+        </section>
         <section id="important-dates">
             <h2>Important Dates</h2>
             <p><strong>Submission Deadline:</strong> May 25th, 2025</p>
