--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <h2>Submission Guidelines</h2>
             <ul>
                 <li>Submit a PPT slide describing your approach and achieved accuracy.</li>
-                <li>Include your best model(s), a prediction file (prediction.py), and a CSV file of selected features.</li>
+                <li>Include your best model(s), a prediction file (prediction.py) with all preprocessing steps used, and a CSV file of selected features.</li>
                 <li>Provide open-source code for reproducibility.</li>
                 <li>Submit all materials to: <a href="mailto:afcrinlab@vuw.ac.nz">afcrinlab@vuw.ac.nz</a></li>
             </ul>
@@ -110,6 +110,11 @@
         <section id="important-dates">
             <h2>Important Dates</h2>
             <p><strong>Submission Deadline:</strong> May 25th, 2025</p>
+        </section>
+
+        <section id="eligibility">
+            <h2>Eligibility</h2>
+            <p>The EMAP Dataset Challenge is open to all undergraduate and graduate students at accredited colleges or universities worldwide. A team may consist of up to 6 eligible students and up to 2 mentors.</p>
         </section>
         
     <section id="organizers">
