--- a/index.html
+++ b/index.html
@@ -72,6 +72,9 @@
                 <li>256 EEG features</li>
                 <li>4 peripheral physiological features: galvanic skin response (GSR), respiration, heart rate (HR), and blood volume</li>
             </ul>
+             <p>
+                Resulting in a total of 260 features combined with a moment-by-moment arousal rating.
+            </p>
             <p>
                 Participants can request access to the train and validation set of the extracted features through the following link: <a href="https://www.wgtn.ac.nz/psyc/research/emap-open-database">EMAP Open Database</a>.
             </p>
