--- a/index.html
+++ b/index.html
@@ -103,6 +103,12 @@
                 <li>Submit all materials to: <a href="mailto:afcrinlab@vuw.ac.nz">afcrinlab@vuw.ac.nz</a></li>
             </ul>
         </section>
+
+        <section id="eligibility">
+            <h2>Eligibility</h2>
+            <p>The challenge is open to all undergraduate and graduate students at accredited colleges or universities worldwide. A team may consist of up to 6 eligible students and up to 2 mentors.</p>
+        </section>
+        
         <section id="prizes">
             <h2>Prizes</h2>
             <p>IEEE CEC 2025 conference certificates will be awarded to the 1st, 2nd, and 3rd place winners of this competition.</p>
@@ -110,11 +116,6 @@
         <section id="important-dates">
             <h2>Important Dates</h2>
             <p><strong>Submission Deadline:</strong> May 25th, 2025</p>
-        </section>
-
-        <section id="eligibility">
-            <h2>Eligibility</h2>
-            <p>The EMAP Dataset Challenge is open to all undergraduate and graduate students at accredited colleges or universities worldwide. A team may consist of up to 6 eligible students and up to 2 mentors.</p>
         </section>
         
     <section id="organizers">
