--- a/index.html
+++ b/index.html
@@ -81,17 +81,17 @@
             <h2>Competition Tasks</h2>
             <h3>Primary Task (Regression)</h3>
             <ul>
-                <li>Implement regression algorithms to predict arousal, heart rate, and skin conductance separately using different feature selection approaches.</li>
+                <li>Implement regression algorithms to predict arousal, heart rate, and galvanic skin response separately using different feature selection approaches.</li>
                 <li>Assess the performance of the algorithms using root mean squared error (RMSE) as the evaluation metric.</li>
                 <li>Visualize the results by plotting graphs that compare the predicted and true time courses for arousal, heart rate, and skin conductance.</li>
             </ul>
             <h3>Bonus Task (Classification)</h3>
             <ul>
-                <li>Implement classification models to categorize arousal ratings.</li>
+                <li>Implement classification models with feature selection to categorize arousal ratings.</li>
                 <li>Convert labels into binary classes: Low Arousal (0.00–0.5) and High Arousal (0.51–1.0).</li>
                 <li>Evaluate classification performance using the F1-score as the primary metric.</li>
             </ul>
-                <p><strong>Baseline Code:</strong> You can find baseline code for predicting arousal, skin conductance, and heart rate on our <a href="https://github.com/emapchallenge/baseline-results" target="_blank">GitHub page</a>.</p>
+                <p><strong>Baseline Code:</strong> You can find baseline code for predicting arousal, galvanic skin response, and heart rate on our <a href="https://github.com/emapchallenge/baseline-results" target="_blank">GitHub page</a>.</p>
 
         </section>
         <section id="submission-guidelines">
