--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <ul>
                 <li>Implement regression algorithms to predict arousal, heart rate, and galvanic skin response separately using different feature selection approaches.</li>
                 <li>Assess the performance of the algorithms using root mean squared error (RMSE) as the evaluation metric.</li>
-                <li>Visualize the results by plotting graphs that compare the predicted and true time courses for arousal, heart rate, and skin conductance.</li>
+                <li>Visualize the results by plotting graphs that compare the predicted and true time courses for arousal, heart rate, and galvanic skin response.</li>
             </ul>
             <h3>Bonus Task (Classification)</h3>
             <ul>
