--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 <li>4 peripheral physiological features: galvanic skin response (GSR), respiration, heart rate (HR), and blood volume</li>
             </ul>
              <p>
-                Resulting in a total of 260 features combined with a moment-by-moment arousal rating. Participants can request access to the train and validation set of the extracted features through the following link: <a href="https://www.wgtn.ac.nz/psyc/research/emap-open-database">EMAP Open Database</a>.
+                Resulting in a total of 260 features combined with a moment-by-moment arousal rating. Participants can request access to the train and validation set of the extracted features through the following link: <a href="https://vuw.qualtrics.com/jfe/form/SV_cT1Xr6NCkMbWR38">EMAP Dataset Request Form</a>.
             </p>
                 <p><strong>Note:</strong> The test set is not provided and will be used to rank participants on the scoreboard.</p>
         </section>
