--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
         <section id="eligibility">
             <h2>Eligibility</h2>
-            <p>The challenge is open to all undergraduate and graduate students at accredited colleges or universities worldwide. A team may consist of up to 4 eligible students and up to 2 mentors.</p>
+            <p> The challenge is open to everyone worldwide. A team may consist of up to 4 participants and up to 2 mentors. </p>
         </section>
         
         <section id="prizes">
@@ -115,7 +115,7 @@
         </section>
         <section id="important-dates">
             <h2>Important Dates</h2>
-            <p><strong>Submission Deadline:</strong> May 25th, 2025</p>
+            <p><strong>Submission Deadline:</strong> June 15th, 2025</p>
         </section>
         
     <section id="organizers">
