--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         <li style="display: flex; align-items: center; margin-bottom: 1rem;">
             <img src="images/harisu.png" alt="Harisu Abdullahi Shehu" style="width: 60px; height: 60px; border-radius: 50%; margin-right: 1rem;">
             <div>
-                <strong>Harisu Abdullahi Shehu</strong><br>
+                <strong>Dr. Harisu Abdullahi Shehu</strong><br>
                 School of Engineering and Computer Science, Victoria University of Wellington, New Zealand.<br>
                 Email: <a href="mailto:harisu.shehu@ecs.vuw.ac.nz">harisu.shehu@ecs.vuw.ac.nz</a>
             </div>
@@ -132,7 +132,7 @@
         <li style="display: flex; align-items: center; margin-bottom: 1rem;">
             <img src="images/hedwig.jpg" alt="Hedwig Eisenbarth" style="width: 60px; height: 60px; border-radius: 50%; margin-right: 1rem;">
             <div>
-                <strong>Hedwig Eisenbarth</strong><br>
+                <strong>A/Prof. Hedwig Eisenbarth</strong><br>
                 School of Psychology, Victoria University of Wellington, New Zealand.<br>
                 Email: <a href="mailto:hedwig.eisenbarth@vuw.ac.nz">hedwig.eisenbarth@vuw.ac.nz</a>
             </div>
@@ -140,7 +140,7 @@
         <li style="display: flex; align-items: center; margin-bottom: 1rem;">
             <img src="images/bing.jpg" alt="Bing Xue" style="width: 60px; height: 60px; border-radius: 50%; margin-right: 1rem;">
             <div>
-                <strong>Bing Xue</strong><br>
+                <strong>Prof. Bing Xue</strong><br>
                 School of Engineering and Computer Science, Victoria University of Wellington, New Zealand.<br>
                 Email: <a href="mailto:bing.xue@ecs.vuw.ac.nz">bing.xue@ecs.vuw.ac.nz</a>
             </div>
@@ -148,7 +148,7 @@
         <li style="display: flex; align-items: center; margin-bottom: 1rem;">
             <img src="images/will.jpg" alt="Will Browne" style="width: 60px; height: 60px; border-radius: 50%; margin-right: 1rem;">
             <div>
-                <strong>Will Browne</strong><br>
+                <strong>Prof. Will Browne</strong><br>
                 School of Electrical Electronics and Robotics, Queensland University of Technology, Australia.<br>
                 Email: <a href="mailto:will.browne@qut.edu.au">will.browne@qut.edu.au</a>
             </div>
